--- a/style.css
+++ b/style.css
@@ -237,6 +237,7 @@ body::after
     border-radius: 15px;
     width: 100%;
     padding: 10px;
+    color: #fff;
     background: none;
     font-size: 16px;
     border: 1px solid #fff;
